# GoodStewards

./: .cursorrules  .env.example  .gitignore  GEMINI.md  README.md  docker-compose.yml  test_workflow.py  ux_mockup.md  workflow_diagram.md
backend/: .coverage  BUILD.md  DATABASE_SCHEMA.md  Dockerfile  api_load_basic_workflow_data.py  check_all_tables.py  check_db_connection.py  check_db_tables.py  check_payment_tables.py  check_user_table.py  cleanup_database.py  cleanup_duplicate_tables.py  cleanup_duplicate_tables_auto.py  database.py  generate_synthetic_data.py  init_db.py  load_test_data.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_user_query.py  setup_database.py  startup.sh  test.db  test_data_summary.md  verify_test_data.py
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 69da2f6dedf1_add_missing_user_columns.py  f8c03a1f8cd7_.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  feedback.py  forms.py  organizations.py  payments.py  receipts.py  users.py
backend/app/core/: auth.py  config.py  db.py  init_db.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: feedback.py
backend/app/services/: baml_service.py  storage_service.py
backend/baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
backend/baml_src/: clients.baml  extract_receipt.baml  extract_receipts.baml  receipt_image_extraction.baml
backend/scripts/: build.bat  build.sh
backend/tests/: README.md  __init__.py  conftest.py  conftest_simple.py  example_test_usage.py  test_auth.py  test_data.py  test_main.py  test_receipts.py  test_scenarios.py  test_simple.py
data/: synthetic_data.csv
(+30 files in other folders)
